--- a/styles/home.css
+++ b/styles/home.css
@@ -44,34 +44,8 @@
   @apply p-2 bg-blue-500 rounded-full shadow-md hover:shadow-lg scale-up;
 }
 
-.modal-container {
-  @apply fixed transition ease-in-out inset-0
-  bg-gray-500 bg-opacity-70 
-  dark:bg-gray-1200 dark:bg-opacity-70 dark:text-gray-100 
-  flex justify-center items-center z-50;
-}
-
-.modal-content {
-  @apply p-6 rounded-lg border-blue-700 border-4 relative text-xl max-w-4xl font-impress
-  text-gray-800 bg-gray-100
-  dark:text-gray-100 dark:bg-gray-1100;
-}
-
 .modal-btn {
   @apply hover:underline text-gray-800 dark:text-gray-400;
-}
-
-.close-btn {
-  @apply absolute top-2 right-1 text-2xl text-blue-700 hover:text-blue-900 w-8 h-8 flex justify-center items-stretch;
-}
-
-.privacy-scrollbar {
-  @apply scrollbar-thin scrollbar-thumb-blue-900
-    scrollbar-thumb-rounded-full;
-}
-
-.dark .privacy-scrollbar {
-  @apply scrollbar-thumb-blue-900;
 }
 
 .privacy-title {
